--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.3.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
@@ -18,7 +20,11 @@
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-rnd": "^10.4.1",
+    "rxjs": "^7.8.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
