--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "html-react-parser": "^3.0.15",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
@@ -27,5 +28,8 @@
     "rxjs": "^7.8.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "postcss-import": "^15.1.0"
   }
 }
