--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@
 GRAPHQL_URI='https://sm.dreamsite.tech/graphql'
 DEV_GRAPHQL_URI='https://sm.dreamsite.tech/graphql'
 
+# GOOGLE ANALYTICS
+GA_TRACKING_ID ="G-Y2V8PDBPHC"
 #MAIL VARIABLES
 EMAIL_ADRESS=martinmaffei95@gmail.com
 EMAIL_PASS=''
