fixed visual issue in reproductos. Added gtm scripts

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ DEV_GRAPHQL_URI='https://sm.dreamsite.tech/graphql'
 
 # GOOGLE ANALYTICS
 GA_TRACKING_ID ="G-Y2V8PDBPHC"
+GTM_CONTAINER_ID ="GTM-5P472FF"
 #MAIL VARIABLES
 EMAIL_ADRESS=martinmaffei95@gmail.com
 EMAIL_PASS=''
