--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^13.3.0",
+    "@hookform/resolvers": "^3.2.0",
     "@types/node": "18.15.11",
     "@types/nodemailer": "^6.4.7",
     "@types/react": "18.0.35",
@@ -21,6 +21,7 @@
     "html-react-parser": "^3.0.15",
     "next": "^13.4.4",
     "nodemailer": "^6.9.4",
+    "notistack": "^3.0.1",
     "postcss": "8.4.21",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
