--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-rnd": "^10.4.1",
     "rxjs": "^7.8.0",
     "tailwindcss": "3.3.1",
+    "tozod": "^3.0.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
